<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <!-- File Names -->
    <string name="shared_prefs">SHARED_PREFERENCES_FILE</string>

    <!-- Strings General -->
    <string name="temp_text">Temp</string>
    <string name="temp_num_text">#</string>
    <string name="app_name">PixelPOS</string>
    <string name="action_settings">Settings</string>
    <string name="sale_total_title">Total: </string>
    <string name="sale_total_generic">R##.##</string>
    <string name="discount">Discount(%)</string>
    <string name="qunatity">Quantity</string>
    <string name="stay_logged_in">Stay Logged In</string>
    

    <string-array name="payment_list">
        <item>Cash</item>
        <item>Depit Card</item>
        <item>Credit Card</item>
        <item>Direct Deposit</item>
    </string-array>

    <!-- Buttons -->
    <string name="sale_button_add_item">Add Item</string>
    <string name="sale_button_finalize">Finalize</string>
    <string name="sale_button_back">Back</string>
    <string name="search_button">Search</string>
    <string name="login_create_button_create">Create</string>
    <string name="login_create_button_back">Back</string>
    <string name="login_button_login">Login</string>
    <string name="login_button_create">Create New User</string>
    <string name="scan_button_create">Create Item</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="main_sales">Sales</string>
    <string name="main_credit">Credit Note</string>
    <string name="main_search">Search</string>
    <string name="main_add_stock">Add Stock</string>
    <string name="main_log_out">Log Out</string>
    <string name="main_get_totals">Get Totals</string>

    <!-- Hints -->
    <string name="password_confirm_hint">Confirm Password</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="hint_id">Item ID</string>
    <string name="hint_description">Item Description</string>
    <string name="hint_price_buy">Buy Price</string>
    <string name="hint_price_sell">Selling Price</string>
    <string name="hint_quantity">Quantity</string>
    <string name="hint_category">Category</string>
    <string name="hint_supplier">Supplier</string>
    <string name="hint_search">Product Name</string>

</resources>