<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.icydevs.pixelpos.MainActivity" >

    <Button
        android:id="@+id/button_sales"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:onClick="onClick"
        android:text="@string/main_sales" />

    <Button
        android:id="@+id/button_credit_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_sales"
        android:layout_centerHorizontal="true"
        android:onClick="onClick"
        android:text="@string/main_credit" />

    <Button
        android:id="@+id/button_add_stock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_credit_note"
        android:layout_centerHorizontal="true"
        android:onClick="onClick"
        android:text="@string/main_add_stock" />

    <Button
        android:id="@+id/button_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_add_stock"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:onClick="onClick"
        android:text="@string/main_search" />

    <Button
        android:id="@+id/button_get_totals"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_search"
        android:layout_centerHorizontal="true"
        android:onClick="onClick"
        android:text="@string/main_get_totals" />

    <Button
        android:id="@+id/button_log_out"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_get_totals"
        android:layout_centerHorizontal="true"
        android:onClick="onClick"
        android:text="@string/main_log_out" />

</RelativeLayout>