<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <Button
        android:id="@+id/sales_button_add_item"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/sale_button_add_item" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/sales_button_finalize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sale_button_finalize" />

        <Button
            android:id="@+id/sales_button_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sale_button_back" />

    </LinearLayout>
    
</LinearLayout>
