<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.icydevs.pixelpos.MainActivity" >

    <ImageView
        android:contentDescription="Temp Splash"
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:src="@drawable/ic_launcher" />

    <RelativeLayout
        android:id="@+id/RelativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageView1"
        android:layout_below="@+id/imageView1" >

        <Button
            android:id="@+id/button_create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_above="@+id/button_login_back"
            android:text="@string/login_create_button_create" />

        <Button
            android:id="@+id/button_login_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:text="@string/login_create_button_back" />
        
        <EditText
            android:id="@+id/edit_text_password_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/button_create"
            android:layout_alignParentRight="true"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/password_confirm_hint" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/edit_text_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/edit_text_password_confirm"
            android:layout_alignParentRight="true"
            android:inputType="textPassword"
            android:ems="10"
            android:hint="@string/password_hint" />

        <EditText
            android:id="@+id/edit_text_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/edit_text_password"
            android:layout_alignParentLeft="true"
            android:ems="10"
            android:hint="@string/username_hint" />

    </RelativeLayout>

</RelativeLayout>
