<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.icydevs.pixelpos.MainActivity" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:contentDescription="Temp Splash"
        android:src="@drawable/ic_launcher" />

    <RelativeLayout
        android:id="@+id/RelativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageView1"
        android:layout_below="@+id/imageView1" >

        <Button
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/button_login_create"
            android:layout_centerHorizontal="true"
            android:layout_margin="2.5dp"
            android:background="@drawable/main_button"
            android:onClick="login"
            android:text="@string/login_button_login" />

        <EditText
            android:id="@+id/edit_text_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/edit_text_password"
            android:layout_alignParentRight="true"
            android:layout_margin="2.5dp"
            android:background="@drawable/main_text"
            android:ems="10"
            android:hint="@string/username_hint"
            android:paddingLeft="10dp"
            android:paddingTop="5dp" />

        <Button
            android:id="@+id/button_login_create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_margin="2.5dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/main_button"
            android:onClick="toCreate"
            android:text="@string/login_button_create" />

        <CheckBox
            android:id="@+id/check_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/button_login"
            android:layout_centerHorizontal="true"
            android:text="@string/stay_logged_in" />

        <EditText
            android:id="@+id/edit_text_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/check_box"
            android:layout_alignParentLeft="true"
            android:layout_margin="2.5dp"
            android:background="@drawable/main_text"
            android:ems="10"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:paddingTop="5dp" >

            <requestFocus />
        </EditText>
    </RelativeLayout>

</RelativeLayout>